# queensac

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  SECURITY.md  action.yml  deny.toml  example.md
.github/: codecov.yml  dependabot.yml
.github/workflows/: cache.yml  milestone_assign.yml  rust.yml  rust_ci.yml  shuttle_deploy.yml
.sqlx/: query-03a8230734da8b966adda4eadf99bd665be8d2cbba1b71c55677f83ec71969f5.json  query-37bd35a93ead8ace791a16f9fd49a011438edf41f2967985de1ec9b88518725d.json  query-bd09aa624890b7c599d0a89016d941d3d0b76ecd2d3c603c4814182c5e202be2.json  query-bdbac467ae90075b836db2aec5729c159c1e96d4cf691b0f6b4b51b2361cf710.json
configuration/: local.yaml  production.yaml
migrations/: 20250527143623_initial.sql
pawn/: package.json
pawn/app/: layout.tsx  page.tsx
pawn/components/ui/: use-toast.ts
pawn/lib/: api-client.ts
rook/: .env  .gitignore  Cargo.toml  deny.toml
rook/.sqlx/: query-5079ceb0a5dadbc9f948da81be241398b81e775b4bbb9c5014d7c6c6ce8ed3e7.json  query-cc44dadc799019ce0c67bf4ebf1b47f2a0e6ec4ce623e768afe1c25db025cabd.json
rook/configuration/: base.yaml  local.yaml  production.yaml
rook/migrations/: 20250527160932_alter_verify_code.sql  20250707131919_create_check_result_table.sql
rook/src/: configuration.rs  db.rs  email_client.rs  lib.rs  main.rs  main_test.rs  startup.rs
rook/src/api/: dto.rs
rook/src/domain/: email_verification.rs  email_verification_service.rs  mod.rs  new_subscriber.rs  repository_url.rs  subscriber_email.rs
rook/src/git/: file_tracker.rs  link_extractor.rs  mod.rs  pr_generator.rs  repo.rs  trace_route.rs  url.rs
rook/src/link/: mod.rs
rook/src/link_checker/: link.rs  scheduler.rs  sse.rs
rook/src/schedule/: mod.rs  sse.rs
rook/tests/: check.rs  sse.rs
rook/tests/api/: check.rs  helpers.rs  main.rs  sse.rs
src/: configuration.rs  db.rs  lib.rs  main.rs  startup.rs
src/api/: dto.rs
src/domain/: mod.rs  new_subscriber.rs  repository_url.rs  subscriber_email.rs  time.rs
src/git/: file_tracker.rs  link_extractor.rs  mod.rs  pr_generator.rs  pr_generator.rs.bak  repo.rs  url.rs
src/link/: mod.rs
src/link_checker/: checker.rs  link.rs  mod.rs  service.rs  sse.rs
src/schedule/: mod.rs
tests/api/: helpers.rs  main.rs  sse.rs
