[package]
name = "queensac"
authors = ["Redddy <midzy0228@gmail.com>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/reddevilmidzy/queensac"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0"
octocrab = "0.45.0"
url = "2.5.6"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serial_test = "3.0.0"
wiremock = "0.6.4"
