[package]
name = "queensac"
authors = ["Redddy <midzy0228@gmail.com>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/reddevilmidzy/queensac"
license = "Apache-2.0"
readme = "README.md"

[dependencies]
regex = "1.12"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.48", features = ["fs", "rt", "rt-multi-thread", "time"] }
git2 = "0.20"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0"
octocrab = "0.47.0"
url = "2.5.6"
clap = { version = "4.5", features = ["derive"] }
jsonwebtoken = "9"
dotenvy = "0.15"

[dev-dependencies]
serial_test = "3.0.0"
wiremock = "0.6.5"
