[package]
name = "queensac"
authors = ["Redddy <midzy0228@gmail.com>"]
version = "0.1.0"
edition = "2024"
repository = "https://github.com/reddevilmidzy/queensac"
license = "Apache-2.0"
readme = "../README.md"

[dependencies]
axum = "0.8"
regex = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
git2 = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shuttle-axum = "0.55.0"
shuttle-runtime = { version = "0.55.0", default-features = false } # see https://docs.shuttle.dev/docs/logs#default-tracing-subscriber
validator = "0.20"
secrecy = { version = "0.8", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
dotenv = "0.15"
chrono = { version = "0.4.41", features = ["serde"] }
rand = { version = "0.9", features = ["std_rng"] }

[dev-dependencies]
serial_test = "3.0.0"
fake = "4.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
